# ade-dedrm

./: .env.example  .gitignore  NOTICE  README.ko.md  README.mcpb.md  README.md  manifest.json  pyproject.toml
docs/: tier3-activate-plan.md
scripts/: build_mcpb.sh
src/ade_dedrm/: __main__.py  adobe_download.py  adobe_fulfill.py  adobe_http.py  adobe_import.py  adobe_pdf_patch.py  adobe_sign.py  adobe_state.py  calibre_web.py  cli.py  config.py  epub.py  keyfetch.py  pdf.py
src/ade_dedrm/mcpb/: __init__.py  __main__.py  security.py  server.py  tools.py
tests/: test_adobe_sign.py  test_adobe_state.py  test_calibre_web.py  test_config.py  test_mcp_server.py  test_pdf.py  test_pdf_patch.py  test_smoke.py
